--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,7 @@
     </div>
     <div class="flex-container">
         <div>
-            <iframe src="https://www.youtube.com/embed/fm09_puAN9k" width="640" height="480"></iframe>
+            <iframe src="https://www.youtube.com/embed/fm09_puAN9k" width="640vw" height="480vw"></iframe>
         </div>
         <div class="form">
             <fieldset>
@@ -122,5 +122,10 @@
             </fieldset>
         </div>        
     </div>
+    <br><br>
+    <div>
+        <iframe src="https://www.desmos.com/calculator" width="1080vw" height="720vw" class=".center-aligned-iframe"></iframe>
+    </div>
+    
 </body>
 </html>
