--- a/index.htm
+++ b/index.htm
@@ -124,12 +124,13 @@
     </div>
     <br><br>
     <div>
-        <iframe src="https://www.desmos.com/calculator" width="1080vw" height="720vw" class=".center-aligned-iframe"></iframe>
-    </div>
-    <div>
         <!-- Elfsight AI Chatbot | Untitled AI Chatbot -->
     <script src="https://static.elfsight.com/platform/platform.js" async></script>
     <div class="elfsight-app-58245911-a4d7-4378-a4a6-b3bf67cb5800" data-elfsight-app-lazy></div>
+    </div>
+    <div>
+        <iframe src="https://leetcard.jacoblin.cool/sshclient" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+        <p>Check out my LeetCode profile for coding challenges and solutions.</p>
     </div>
     
 </body>
