--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
     <div class="elfsight-app-58245911-a4d7-4378-a4a6-b3bf67cb5800" data-elfsight-app-lazy></div>
     </div>
     <div>
-        <iframe src="https://leetcard.jacoblin.cool/sshclient" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://leetcard.jacoblin.cool/sshclient?ext=heatmap" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
         <p>Check out my LeetCode profile for coding challenges and solutions.</p>
     </div>
     
