--- a/index.htm
+++ b/index.htm
@@ -129,8 +129,39 @@
     <div class="elfsight-app-58245911-a4d7-4378-a4a6-b3bf67cb5800" data-elfsight-app-lazy></div>
     </div>
     <div>
+        <h1>Progress on LeetCode</h1>
         <iframe src="https://leetcard.jacoblin.cool/sshclient?ext=heatmap" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
         <p>Check out my LeetCode profile for coding challenges and solutions.</p>
+    </div>
+    <div>
+        <h1>Github Heatmap Calendar</h1>
+        <!-- Include the library. -->
+<script
+  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"
+></script>
+
+<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+<link
+   rel="stylesheet"
+   href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+/>
+<style>
+    a[href="#year-link-2025"] {
+    display: none; /* Hides the "Skip to contributions year list" link */
+  }
+</style>
+<!-- Prepare a container for your calendar. -->
+<div class="calendar">
+    <!-- Loading stuff -->
+    Loading the data just for you.
+</div>
+
+<script>
+    //GitHubCalendar(".calendar", "PareekHeymun");
+    // or enable responsive functionality
+    GitHubCalendar(".calendar", "PareekHeymun", { responsive: true , global_stats: false});
+</script>
+<p>Check out my Github and ping me for collaborations</p>
     </div>
     
 </body>
